update profile image

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
     float: left;
     position: absolute;
     z-index: 1;
-    background: url(https://static1.squarespace.com/static/52091c5…/t/5ff3740…/1609790465485/tumblr_283f12b…_a79be6b4_1280.jpg) no-repeat top center;
+    background: url(../image/profile.jpg) no-repeat top center;
     width: 400px;
     height: 513px;
     background-size: cover;
