update profile image

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
     float: left;
     position: absolute;
     z-index: 1;
-    background: url(../image/profile.jpg) no-repeat top center;
+    background: url(./image/profile.jpg) no-repeat top center;
     width: 400px;
     height: 513px;
     background-size: cover;
