--- a/style.css
+++ b/style.css
@@ -1,17 +1,307 @@
-* {margin:0;padding:0;}
+* {
+  margin:0;padding:0;
+}
 
-html {
+*::-moz-selection {    background: rgba(0,85,255,.99);
+  color: #fff;}
+  *::selection {     background: rgba(0,85,255,.99);
+  color: #fff;}
+
+
+@font-face {
+  font-family: editorsnote;
+  src: url(/font/editorsnote.ttf);
+}
+
+body {
   background:#fff;
+  font-family:editorsnote;
+}
+
+p {
+  font-size:24px;
+  margin-bottom:30px;
+}
+
+a {
+text-decoration: none !important;
+        border-bottom: 3px solid #e6e3d9 !important;
+        box-shadow: inset 0 -4px 0 #e6e3d9;
+        color: inherit;
+        -webkit-transition: background .15s cubic-bezier(.33,.66,.66,1);
+        transition: background .15s cubic-bezier(.33,.66,.66,1);
+}
+
+a:hover {
+  text-decoration: none !important;
+    background: #e6e3d9;
+        color:#000 !important;
+  border-bottom: 3px solid #e6e3d9 !important;
+}
+
+a.logo {
+  height:300px;
+  width:300px;
+  border: none !important;
+}
+
+#main-container {
+  margin:0 auto;
+  max-width:1300px;
+  padding:20px;
+}
+
+.sixty {
+  width:60%;
+}
+
+.bio {
+  margin-left:10%;
+  padding-bottom:50px;
+  cursor:default;
 }
 
 .profile {
     float: left;
     position: absolute;
     z-index: 1;
-    background: url(./image/profile.jpg) no-repeat top center;
+    background: url(./img/profile.jpg) no-repeat top center;
     width: 400px;
     height: 513px;
     background-size: cover;
     box-shadow: 0 16px 42px rgb(0 0 0 / 30%);
     overflow: hidden;
 }
+
+
+.bio h2 {
+  position: relative;
+  margin-left: 300px;
+  font-size: 60px;
+  padding-top: 100px;
+  z-index: 1000;
+  width: 70%;
+}
+
+.bio p {
+position:relative;
+font-size:30px;
+line-height:1.5;
+margin-left:200px;
+z-index:1000;
+width:70%;
+}
+
+/* LISTENING TO */
+
+.listening-to {
+  height:320px;
+    width: 440px;
+  display:inline-block;
+  position:relative;
+}
+
+.album-info {
+	position: absolute;
+    z-index: 1000;
+    font-size: 29px;
+    margin: 30px 0 0 0px;
+    padding: 0;
+  top:30px;
+}
+
+.artist, .album {
+  padding: 5px;
+  color:#222 !important;
+  background:rgba(255,255,255,0.9);
+}
+
+.album-info .album {
+	font-size:18px;
+	text-transform:lowercase;
+    display: inline;
+  line-height:30px;
+  padding-right:10px;
+  font-style:italic;
+}
+
+.album-info .artist {
+  font-family:brandon-grotesque;
+  margin:0;
+  font-size:34px;
+  padding-right:8px;
+  line-height:39px;
+  display:inline;
+}
+
+.album-art {
+	position:absolute;
+	float:left;
+  margin-left:80px;
+}
+
+.album-art img {
+	height:300px !important;
+  max-width:300px;
+box-shadow: 0 16px 42px rgba(0,0,0,.3);
+  background-size:cover;
+  border-radius:3px;
+}
+
+
+/* DESIGN PRINCIPLES */
+
+.application-window {
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0 16px 42px rgba(0, 0, 0, 0.3);
+  margin: 6% auto 0;
+  position: relative;
+  width: 90%;
+  max-width: 960px;
+  height: 553px;
+  margin: 50px auto 50px auto;
+  overflow: hidden;
+  font-family: 'Univers', sans-serif;
+  line-height: 140%;
+  font-weight: 400; }
+
+.sidebar {
+  float: left;
+  width: 230px;
+  border-top-left-radius: 6px;
+  border-right: 1px solid #e2e2e2; }
+  .sidebar.blurred {
+    opacity: .4; }
+  .sidebar.unblurred {
+    opacity: 1; }
+
+@media screen and (max-width: 800px) {
+  .sidebar {
+    display: none; }
+  .button-add-note {
+    display: none; } }
+
+.search-container {
+  background-color: #fff;
+  border-bottom: 1px solid #e7e7e7;
+  padding: 10px 10px;
+  height: 55px; }
+  .search-container .icon-search {
+    color: #aaa;
+    margin-top: 7px;
+    margin-left: 10px;
+    position: absolute; }
+  .search-container .input-search {
+    padding-left: 30px;
+    width: 100%; }
+
+.preview-list {
+  border-bottom-left-radius: 6px;
+  height: 500px;
+  position: relative;
+  overflow: scroll; }
+
+.preview {
+  color: #111;
+  background-color: #fff;
+  border-top: 1px solid #f6f6f6;
+  cursor: pointer;
+  padding: 10px 20px;
+  transition: all 120ms ease; }
+  .preview:hover .preview-header {
+    color: blue;
+    transition: all 120ms ease; }
+  .preview.selected {
+    border-top: 1px solid #e7e7e7;
+    border-left: 4px solid blue;
+    padding-left: 14px;
+    background: #f8f8f8; }
+  .preview:first-child {
+    border-top: none; }
+  .preview:last-child {
+    border-bottom: 1px solid #f6f6f6; }
+  .preview .icon-selected-preview {
+    color: blue;
+    font-size: 15px;
+    margin-left: -26px;
+    margin-top: 1px;
+    position: absolute; }
+  .preview .icon-save-status {
+    color: #e7e7e7;
+    font-size: 15px;
+    margin-left: 180px;
+    position: absolute; }
+
+.preview.selected + .preview,
+.preview:active + .preview {
+  border-top: 1px solid #e7e7e7; }
+
+.preview-header {
+  margin: 0 0 4px 0;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 14px;
+  line-height: 1.1; }
+
+.preview-body {
+  margin: 0;
+  color: #aaa;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 14px;
+  line-height: 1.1; }
+
+.writing-interface {
+  height: 553px; }
+  .writing-interface .title-bar {
+    background-color: #fff;
+    border-bottom: 1px solid #e7e7e7;
+    height: 55px;
+    padding: 18px 20px; }
+    .writing-interface .title-bar .title {
+      line-height: 1;
+      font-family: "Univers", sans-serif;
+      font-weight: bold;
+      font-size: 20px;
+      display: inline;
+      padding-left: 20px; }
+  .writing-interface .scrollable {
+    height: 498px;
+    overflow: scroll; }
+  .writing-interface .textarea-writing {
+    cursor: text !important;
+    padding: 40px;
+    display: inline;
+    font-family: "range-mono", monospace;
+    font-size: 16px;
+    line-height: 1.8;
+    width: 100%;
+    border: none;
+    overflow: auto;
+    outline: none;
+    box-shadow: none; }
+
+.button-add-note {
+  text-align: center;
+  position: absolute;
+  background-color: #fff;
+  z-index: 1000;
+  right: 14px;
+  top: 10px;
+  color: #c3c3c3;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  padding: 3px 12px 5px 12px;
+  cursor: pointer;
+  transition: all 80ms ease;
+  opacity: .4; }
+  .button-add-note:hover {
+    opacity: 1;
+    transition: all 80ms ease;
+    color: blue;
+    border-color: #3333ff; }
+  .button-add-note .fa-plus {
+    font-size: 14px;
+    position: relative;
+    top: 1px; }
